--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Mohamed Drugs Shop</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Mohamed Drugs Shop</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
-<body class="dark-theme">
-    <header>
-        <h1>Mohamed Drugs Shop</h1>
-        <img src="images/banner.jpg" alt="Banner" style="width:100%;">
-    </header>
-    <main>
-        <section id="countries">
-            <h2>Select Your Country</h2>
-            <div class="country-grid">
-                <a href="products/egypt/index.html">Egypt</a>
-                <a href="products/ksa/index.html">Saudi Arabia</a>
-                <a href="products/uae/index.html">UAE</a>
-                <a href="products/qatar/index.html">Qatar</a>
-                <a href="products/oman/index.html">Oman</a>
-                <a href="products/kuwait/index.html">Kuwait</a>
-                <a href="products/bahrain/index.html">Bahrain</a>
-            </div>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2025 Mohamed Drugs Shop</p>
-    </footer>
+<body>
+  <header>
+    <h1>Mohamed Drugs Shop</h1>
+    <img src="images/banner.jpg" alt="Shop Banner" class="banner" />
+  </header>
+
+  <main>
+    <section class="country-grid">
+      <a href="Countries/egypt.html"><img src="images/egypt.png" alt="Egypt Flag" /> Egypt</a>
+      <a href="Countries/uae.html"><img src="images/uae.png" alt="UAE Flag" /> UAE</a>
+      <a href="Countries/ksa.html"><img src="images/ksa.png" alt="KSA Flag" /> Saudi Arabia</a>
+      <a href="Countries/oman.html"><img src="images/oman.png" alt="Oman Flag" /> Oman</a>
+      <a href="Countries/qatar.html"><img src="images/qatar.png" alt="Qatar Flag" /> Qatar</a>
+      <a href="Countries/kuwait.html"><img src="images/kuwait.png" alt="Kuwait Flag" /> Kuwait</a>
+      <a href="Countries/bahrain.html"><img src="images/bahrain.png" alt="Bahrain Flag" /> Bahrain</a>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Mohamed Drugs Shop. All rights reserved.</p>
+  </footer>
 </body>
 </html>
