--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mohamed Drugs Shop</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header>
     <h1>Mohamed Drugs Shop</h1>
-    <img src="images/banner.jpg" alt="Shop Banner" class="banner" />
   </header>
 
-  <main>
-    <section class="country-grid">
-      <a href="Countries/egypt.html"><img src="images/egypt.png" alt="Egypt Flag" /> Egypt</a>
-      <a href="Countries/uae.html"><img src="images/uae.png" alt="UAE Flag" /> UAE</a>
-      <a href="Countries/ksa.html"><img src="images/ksa.png" alt="KSA Flag" /> Saudi Arabia</a>
-      <a href="Countries/oman.html"><img src="images/oman.png" alt="Oman Flag" /> Oman</a>
-      <a href="Countries/qatar.html"><img src="images/qatar.png" alt="Qatar Flag" /> Qatar</a>
-      <a href="Countries/kuwait.html"><img src="images/kuwait.png" alt="Kuwait Flag" /> Kuwait</a>
-      <a href="Countries/bahrain.html"><img src="images/bahrain.png" alt="Bahrain Flag" /> Bahrain</a>
-    </section>
-  </main>
+  <section class="banner">
+    <img src="images/banner.jpg" alt="Store Banner">
+  </section>
+
+  <section class="country-grid">
+    <h2>Select Your Country</h2>
+    <div class="grid">
+      <a href="Countries/egypt.html" class="country">🇪🇬 Egypt</a>
+      <a href="Countries/ksa.html" class="country">🇸🇦 Saudi Arabia</a>
+      <a href="Countries/uae.html" class="country">🇦🇪 UAE</a>
+      <a href="Countries/oman.html" class="country">🇴🇲 Oman</a>
+      <a href="Countries/qatar.html" class="country">🇶🇦 Qatar</a>
+      <a href="Countries/kuwait.html" class="country">🇰🇼 Kuwait</a>
+      <a href="Countries/bahrain.html" class="country">🇧🇭 Bahrain</a>
+    </div>
+  </section>
 
   <footer>
     <p>&copy; 2025 Mohamed Drugs Shop. All rights reserved.</p>
