--- a/index.html
+++ b/index.html
@@ -1,216 +1,121 @@
-<!DOCTYPE html><html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mohamed Drugs Shop</title>
-  <!-- Font Awesome for icons -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    integrity="sha512-pV1xQ+1hXkO58T+TCHVQmT8XbBQTz1F+WpnMAd3iP5SuP0C9+3pXiF7KX6J+8T+6FqG4+7MmKYpV+9MfYdH5xg=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  />
-  <style>
-    /* Base Styles */
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #121212;
-      color: #e0e0e0;
-      line-height: 1.6;
-    }
-    a { color: inherit; text-decoration: none; }
-    h1, h2, h3 { margin: 0; }/* Container */
-.container {
-  width: 90%;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 20px 0;
-}
+<!-- ⭐ Rating Section – layout999 -->
+<section class="rating-section">
+  <h2>Rate this product</h2>
 
-/* Header */
-header {
-  background-color: #1f1f1f;
-  padding: 20px 0;
-  text-align: center;
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.5);
-}
-header h1 {
-  font-size: 2.5rem;
-  color: #ffffff;
-  margin-bottom: 10px;
-}
-.header-countries {
-  font-size: 0.95rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  color: #cfcfcf;
-}
-.header-countries i { color: #f39c12; }
+  <div class="average-rating">
+    <span class="average-text">4.7 out of 5 stars</span>
+    <div class="stars">
+      <span class="star full">★</span>
+      <span class="star full">★</span>
+      <span class="star full">★</span>
+      <span class="star full">★</span>
+      <span class="star half">★</span>
+    </div>
+  </div>
 
-/* Minor Heading Above Hero */
-.minor-heading {
-  background-color: #1a1a1a;
-  padding: 10px 20px;
-  margin: 20px 0 0;
-  display: inline-flex;
-  align-items: center;
-  border-radius: 30px;
-  font-size: 1rem;
-  color: #ffffff;
-}
-.minor-heading i {
-  margin-right: 8px;
-  font-size: 1.2rem;
-  color: #f39c12;
-}
+  <form id="ratingForm">
+    <div class="rating-options">
+      <label><input type="radio" name="rating" value="5"> <span>⭐⭐⭐⭐⭐ Excellent</span></label>
+      <label><input type="radio" name="rating" value="4"> <span>⭐⭐⭐⭐ Good</span></label>
+      <label><input type="radio" name="rating" value="3"> <span>⭐⭐⭐ Normal</span></label>
+      <label><input type="radio" name="rating" value="2"> <span>⭐⭐ Need Improvement</span></label>
+      <label><input type="radio" name="rating" value="1"> <span>⭐ Poor</span></label>
+    </div>
+    <button type="submit">Submit Rating</button>
+  </form>
+</section>
 
-/* Hero Section */
-.hero img {
-  width: 100%;
-  height: auto;
-  display: block;
-  border-radius: 8px;
-  margin-top: 10px;
-}
+<!-- ⭐ Styling -->
+<style>
+  .rating-section {
+    background-color: #1c1c1c;
+    color: #fff;
+    padding: 30px;
+    border-radius: 16px;
+    max-width: 600px;
+    margin: 40px auto;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.05);
+    font-family: 'Segoe UI', sans-serif;
+  }
 
-/* Choose Country Section */
-.choose-country {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-  gap: 15px;
-  margin: 40px 0;
-}
-.country-card {
-  background-color: #1f1f1f;
-  padding: 20px;
-  border-radius: 8px;
-  text-align: center;
-  cursor: pointer;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-.country-card:hover {
-  transform: scale(1.05);
-  box-shadow: 0 8px 16px rgba(0,0,0,0.6);
-}
-.country-card .en {
-  display: block;
-  font-weight: 600;
-  margin-bottom: 5px;
-  font-size: 1.1rem;
-}
-.country-card .ar {
-  font-size: 1rem;
-  color: #bbbbbb;
-}
+  .rating-section h2 {
+    margin-bottom: 20px;
+    font-size: 24px;
+    text-align: center;
+  }
 
-/* Rating Section */
-#rating-section {
-  background-color: #1f1f1f;
-  padding: 30px 20px;
-  margin-bottom: 40px;
-  border-radius: 8px;
-}
-#rating-section h2 {
-  font-size: 1.8rem;
-  margin-bottom: 5px;
-}
-#rating-section p.subtext {
-  font-size: 0.9rem;
-  margin-bottom: 15px;
-  color: #aaaaaa;
-}
-.rating-summary {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  margin-bottom: 15px;
-}
-.rating-summary .score {
-  font-size: 2rem;
-  font-weight: 700;
-}
-.rating-summary .stars i {
-  color: #f39c12;
-  font-size: 1.5rem;
-}
-.rating-controls {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-  margin-bottom: 15px;
-}
-.rating-controls select,
-.rating-controls input[type='text'],
-.rating-controls button {
-  padding: 10px;
-  border: none;
-  border-radius: 4px;
-  font-size: 1rem;
-}
-.rating-controls select,
-.rating-controls input[type='text'] {
-  background-color: #2a2a2a;
-  color: #fff;
-  flex: 1 1 200px;
-}
-.rating-controls button {
-  background-color: #f39c12;
-  color: #121212;
-  cursor: pointer;
-  flex: 0 0 150px;
-  transition: background-color 0.3s ease;
-}
-.rating-controls button:hover {
-  background-color: #d68910;
-}
-/* Loading Bar */
-.loading-bar {
-  width: 0;
-  height: 5px;
-  background-color: #f39c12;
-  border-radius: 3px;
-  margin-top: 10px;
-}
+  .average-rating {
+    text-align: center;
+    margin-bottom: 25px;
+  }
 
-/* Review Form Section */
-#review-form {
-  background-color: #1f1f1f;
-  padding: 30px 20px;
-  border-radius: 8px;
-}
-#review-form h2 {
-  font-size: 1.8rem;
-  margin-bottom: 15px;
-}
-#review-form .form-group {
-  margin-bottom: 15px;
-}
-#review-form .form-group input,
-#review-form .form-group textarea {
-  width: 100%;
-  padding: 10px;
-  border: none;
-  border-radius: 4px;
-  background-color: #2a2a2a;
-  color: #fff;
-  font-size: 1rem;
-}
-#review-form button {
-  background-color: #f39c12;
-  color: #121212;
-  border: none;
-  padding: 12px 20px;
-  border-radius: 4px;
-  font-size: 1rem;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-#review-form button:hover
+  .average-text {
+    display: block;
+    font-size: 18px;
+    margin-bottom: 8px;
+  }
 
+  .stars .star {
+    font-size: 22px;
+    color: #ffc107;
+  }
+
+  .star.half::after {
+    content: "★";
+    position: absolute;
+    width: 50%;
+    overflow: hidden;
+    color: #ffc107;
+  }
+
+  .rating-options label {
+    display: block;
+    padding: 10px 15px;
+    border: 1px solid #333;
+    border-radius: 8px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    background: #2a2a2a;
+    transition: 0.3s;
+  }
+
+  .rating-options input[type="radio"] {
+    margin-right: 10px;
+    accent-color: #ffc107;
+  }
+
+  .rating-options label:hover {
+    background-color: #333;
+  }
+
+  .rating-options input[type="radio"]:checked + span {
+    color: #ffc107;
+    font-weight: bold;
+  }
+
+  button[type="submit"] {
+    display: block;
+    width: 100%;
+    background-color: #ff9800;
+    color: #000;
+    border: none;
+    padding: 12px;
+    font-size: 16px;
+    font-weight: bold;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: background 0.3s;
+  }
+
+  button[type="submit"]:hover {
+    background-color: #ffa726;
+  }
+</style>
+
+<!-- ⭐ Script -->
+<script>
+  document.getElementById('ratingForm').addEventListener('submit', function (e) {
+    e.preventDefault();
+    alert('❌ Invalid purchasing code');
+  });
+</script>
