--- a/index.html
+++ b/index.html
@@ -1,1 +1,1086 @@
+<!DOCTYPE html>
+
+<html lang="en">
+
+<head>
+
+    <meta charset="UTF-8">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Mohamed Drugs Shop | Premium Pharmacy</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+    <style>
+
+        :root {
+
+            --primary: #00c3ff;
+
+            --primary-light: #00e5ff;
+
+            --secondary: #8e44ad;
+
+            --dark-bg: #0d0d0d;
+
+            --darker-bg: #121212;
+
+            --card-bg: #1a1a1a;
+
+            --text-light: #e0e0e0;
+
+            --text-muted: #aaa;
+
+            --accent-purple: #9c27b0;
+
+            --accent-blue: #2196f3;
+
+            --accent-green: #4caf50;
+
+            --accent-orange: #ff9800;
+
+            --accent-red: #f44336;
+
+            --glow: 0 0 15px rgba(0, 195, 255, 0.7);
+
+        }
+
+
+        * {
+
+            margin: 0;
+
+            padding: 0;
+
+            box-sizing: border-box;
+
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+        }
+
+        
+
+        body {
+
+            background: linear-gradient(135deg, var(--dark-bg), var(--darker-bg));
+
+            color: var(--text-light);
+
+            min-height: 100vh;
+
+            background-attachment: fixed;
+
+            background-size: cover;
+
+            padding-bottom: 40px;
+
+            overflow-x: hidden;
+
+        }
+
+        
+
+        /* Header Styles */
+
+        .site-header {
+
+            background: var(--dark-bg);
+
+            padding: 20px 30px;
+
+            text-align: center;
+
+            box-shadow: 0 2px 15px rgba(0,0,0,0.7);
+
+            position: sticky;
+
+            top: 0;
+
+            z-index: 100;
+
+            border-bottom: 1px solid rgba(0, 195, 255, 0.2);
+
+        }
+
+        
+
+        .store-name {
+
+            color: var(--primary);
+
+            font-size: 38px;
+
+            font-weight: 800;
+
+            letter-spacing: 1px;
+
+            margin-bottom: 8px;
+
+            text-shadow: var(--glow);
+
+            position: relative;
+
+            display: inline-block;
+
+            animation: pulse 2s infinite;
+
+        }
+
+        
+
+        .store-name::after {
+
+            content: 'Premium Pharmacy';
+
+            position: absolute;
+
+            bottom: -22px;
+
+            left: 50%;
+
+            transform: translateX(-50%);
+
+            font-size: 16px;
+
+            color: var(--primary-light);
+
+            font-weight: 300;
+
+            letter-spacing: 2px;
+
+            text-shadow: 0 0 8px rgba(0, 195, 255, 0.5);
+
+            width: 100%;
+
+        }
+
+        
+
+        .country-list {
+
+            display: flex;
+
+            flex-wrap: wrap;
+
+            justify-content: center;
+
+            gap: 12px;
+
+            margin-top: 30px;
+
+        }
+
+        
+
+        .country-list span {
+
+            color: var(--text-muted);
+
+            font-size: 13px; /* Slightly smaller font size */
+
+            padding: 6px 14px; /* Slightly smaller padding */
+
+            background: rgba(255,255,255,0.05);
+
+            border-radius: 20px;
+
+            transition: all 0.3s ease;
+
+            position: relative;
+
+            overflow: hidden;
+
+            cursor: pointer;
+
+            border: 1px solid rgba(0, 195, 255, 0.1);
+
+        }
+
+        
+
+        .country-list span::before {
+
+            content: '';
+
+            position: absolute;
+
+            top: 0;
+
+            left: -100%;
+
+            width: 100%;
+
+            height: 100%;
+
+            background: linear-gradient(90deg, transparent, rgba(0,195,255,0.3), transparent);
+
+            transition: all 0.6s;
+
+        }
+
+        
+
+        .country-list span:hover {
+
+            background: rgba(0,195,255,0.1);
+
+            color: var(--primary);
+
+            transform: translateY(-3px);
+
+            box-shadow: var(--glow);
+
+        }
+
+        
+
+        .country-list span:hover::before {
+
+            left: 100%;
+
+        }
+
+        
+
+        /* Hero Image */
+
+        .hero-container {
+
+            position: relative;
+
+            width: 100%;
+
+            max-width: 1200px;
+
+            margin: 40px auto 0;
+
+            padding: 0 20px;
+
+            display: flex;
+
+            flex-direction: column;
+
+            align-items: center;
+
+        }
+
+        
+
+        .hero-image {
+
+            width: 100%;
+
+            height: auto;
+
+            border-radius: 16px;
+
+            box-shadow: 0 15px 40px rgba(0,0,0,0.6);
+
+            border: 1px solid rgba(0,195,255,0.2);
+
+            position: relative;
+
+            z-index: 2;
+
+        }
+
+        
+
+        .hero-text {
+
+            text-align: center;
+
+            color: white;
+
+            font-size: 22px; /* Slightly smaller font size */
+
+            font-weight: bold;
+
+            background: rgba(0,0,0,0.8);
+
+            padding: 15px 30px; /* Slightly smaller padding */
+
+            border-radius: 35px;
+
+            display: inline-flex;
+
+            align-items: center;
+
+            gap: 15px;
+
+            margin-bottom: -25px;
+
+            border: 1px solid var(--primary);
+
+            position: relative;
+
+            z-index: 3;
+
+            box-shadow: var(--glow);
+
+            animation: float 3s ease-in-out infinite;
+
+        }
+
+        
+
+        .delivery-icons {
+
+            display: flex;
+
+            gap: 12px;
+
+            margin-top: 8px;
+
+        }
+
+        
+
+        .delivery-icons i {
+
+            color: var(--primary);
+
+            font-size: 20px; /* Slightly smaller icons */
+
+            text-shadow: 0 0 10px rgba(0, 195, 255, 0.8);
+
+            transition: all 0.3s ease;
+
+        }
+
+        
+
+        .delivery-icons i:hover {
+
+            transform: translateY(-5px);
+
+            color: var(--primary-light);
+
+        }
+
+        
+
+        /* Country Selection */
+
+        .country-selection {
+
+            padding: 60px 20px;
+
+            background: linear-gradient(to bottom, rgba(17,17,17,0.8), rgba(10,10,10,0.9));
+
+            text-align: center;
+
+            position: relative;
+
+            overflow: hidden;
+
+            margin-top: 20px;
+
+        }
+
+        
+
+        .country-selection::before {
+
+            content: '';
+
+            position: absolute;
+
+            top: 0;
+
+            left: 0;
+
+            right: 0;
+
+            height: 3px;
+
+            background: linear-gradient(90deg, transparent, var(--primary), transparent);
+
+        }
+
+        
+
+        .section-title {
+
+            color: var(--primary);
+
+            font-size: 36px; /* Slightly smaller */
+
+            margin-bottom: 15px;
+
+            font-weight: 800;
+
+            position: relative;
+
+            display: inline-block;
+
+            text-shadow: var(--glow);
+
+        }
+
+        
+
+        .section-subtitle {
+
+            color: var(--primary-light);
+
+            font-size: 26px; /* Slightly smaller */
+
+            margin-bottom: 50px;
+
+            display: block;
+
+            letter-spacing: 1px;
+
+            font-weight: 300;
+
+        }
+
+        
+
+        .section-title::after {
+
+            content: '';
+
+            position: absolute;
+
+            bottom: -15px;
+
+            left: 50%;
+
+            transform: translateX(-50%);
+
+            width: 130px; /* Slightly smaller */
+
+            height: 4px; /* Slightly thinner */
+
+            background: linear-gradient(90deg, var(--primary), var(--primary-light));
+
+            border-radius: 5px;
+
+            box-shadow: var(--glow);
+
+        }
+
+        
+
+        .country-grid {
+
+            display: grid;
+
+            grid-template-columns: repeat(auto-fit, minmax(230px, 1fr)); /* Slightly smaller cards */
+
+            gap: 25px; /* Slightly smaller gap */
+
+            max-width: 1250px; /* Slightly narrower */
+
+            margin: 0 auto;
+
+        }
+
+        
+
+        .country-card {
+
+            text-decoration: none;
+
+            background: var(--card-bg);
+
+            padding: 25px 15px; /* Slightly smaller padding */
+
+            color: var(--primary);
+
+            border-radius: 15px; /* Slightly smaller radius */
+
+            font-size: 22px; /* Slightly smaller */
+
+            font-weight: bold;
+
+            display: flex;
+
+            flex-direction: column;
+
+            align-items: center;
+
+            justify-content: center;
+
+            transition: all 0.4s ease;
+
+            box-shadow: 0 8px 25px rgba(0,0,0,0.4);
+
+            border: 1px solid rgba(0,195,255,0.15);
+
+            position: relative;
+
+            overflow: hidden;
+
+            z-index: 1;
+
+        }
+
+        
+
+        .country-card::before {
+
+            content: '';
+
+            position: absolute;
+
+            top: 0;
+
+            left: 0;
+
+            width: 100%;
+
+            height: 100%;
+
+            background: linear-gradient(135deg, rgba(0,195,255,0.1), rgba(142,68,173,0.1));
+
+            z-index: -1;
+
+            opacity: 0;
+
+            transition: opacity 0.4s ease;
+
+        }
+
+        
+
+        .country-card:hover {
+
+            transform: translateY(-10px) scale(1.03);
+
+            box-shadow: 0 15px 35px rgba(0,195,255,0.4);
+
+            background: linear-gradient(135deg, var(--card-bg), #0d2b3a);
+
+        }
+
+        
+
+        .country-card:hover::before {
+
+            opacity: 1;
+
+        }
+
+        
+
+        .country-card img {
+
+            width: 46px; /* Slightly smaller flags */
+
+            margin-bottom: 15px; /* Slightly smaller margin */
+
+            filter: drop-shadow(0 0 5px rgba(0,195,255,0.7));
+
+            transition: all 0.3s ease;
+
+        }
+
+        
+
+        .country-card:hover img {
+
+            transform: scale(1.2);
+
+            filter: drop-shadow(0 0 10px rgba(0,195,255,1));
+
+        }
+
+        
+
+        .country-name {
+
+            text-align: center;
+
+            line-height: 1.4;
+
+            position: relative;
+
+        }
+
+        
+
+        .arabic-name {
+
+            font-size: 24px; /* Slightly smaller */
+
+            display: block;
+
+            font-weight: 700;
+
+            transition: all 0.3s ease;
+
+        }
+
+        
+
+        .english-name {
+
+            font-size: 18px; /* Slightly smaller */
+
+            display: block;
+
+            color: var(--text-muted);
+
+            transition: all 0.3s ease;
+
+        }
+
+        
+
+        .country-card:hover .arabic-name {
+
+            color: var(--primary-light);
+
+            text-shadow: 0 0 10px rgba(0, 195, 255, 0.8);
+
+            animation: pop 0.5s ease;
+
+        }
+
+        
+
+        .country-card:hover .english-name {
+
+            color: white;
+
+        }
+
+        
+
+        /* Animations */
+
+        @keyframes pop {
+
+            0% { transform: scale(1); }
+
+            50% { transform: scale(1.15); }
+
+            100% { transform: scale(1); }
+
+        }
+
+        
+
+        @keyframes pulse {
+
+            0% { text-shadow: 0 0 10px rgba(0, 195, 255, 0.7); }
+
+            50% { text-shadow: 0 0 20px rgba(0, 195, 255, 1), 0 0 30px rgba(0, 195, 255, 0.8); }
+
+            100% { text-shadow: 0 0 10px rgba(0, 195, 255, 0.7); }
+
+        }
+
+        
+
+        @keyframes float {
+
+            0% { transform: translateY(0px); }
+
+            50% { transform: translateY(-8px); }
+
+            100% { transform: translateY(0px); }
+
+        }
+
+        
+
+        /* Responsive adjustments */
+
+        @media (max-width: 768px) {
+
+            .store-name {
+
+                font-size: 32px;
+
+            }
+
+            
+
+            .hero-text {
+
+                font-size: 18px;
+
+                padding: 12px 20px;
+
+            }
+
+            
+
+            .section-title {
+
+                font-size: 30px;
+
+            }
+
+            
+
+            .section-subtitle {
+
+                font-size: 22px;
+
+            }
+
+            
+
+            .country-grid {
+
+                grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
+
+                gap: 20px;
+
+            }
+
+        }
+
+        
+
+        @media (max-width: 480px) {
+
+            .store-name {
+
+                font-size: 28px;
+
+            }
+
+            
+
+            .hero-text {
+
+                font-size: 16px;
+
+                flex-direction: column;
+
+                gap: 8px;
+
+                padding: 10px 15px;
+
+            }
+
+            
+
+            .section-title {
+
+                font-size: 26px;
+
+            }
+
+            
+
+            .section-subtitle {
+
+                font-size: 18px;
+
+            }
+
+            
+
+            .country-grid {
+
+                grid-template-columns: 1fr;
+
+                max-width: 280px;
+
+                gap: 15px;
+
+            }
+
+            
+
+            .country-list span {
+
+                padding: 5px 10px;
+
+                font-size: 11px;
+
+            }
+
+            
+
+            .country-card {
+
+                padding: 20px 10px;
+
+            }
+
+            
+
+            .arabic-name {
+
+                font-size: 20px;
+
+            }
+
+            
+
+            .english-name {
+
+                font-size: 16px;
+
+            }
+
+        }
+
+    </style>
+
+</head>
+
+<body>
+
+    <!-- Header -->
+
+    <header class="site-header">
+
+        <div class="store-name">Mohamed Drugs Shop</div>
+
+        <div class="country-list">
+
+            <span>🚚 مصر</span>
+
+            <span>🚚 الإمارات</span>
+
+            <span>🚚 السعودية</span>
+
+            <span>🚚 قطر</span>
+
+            <span>🚚 الكويت</span>
+
+            <span>🚚 عمان</span>
+
+            <span>🚚 البحرين</span>
+
+        </div>
+
+    </header>
+
+
+    <!-- Hero Image with Text -->
+
+    <div class="hero-container">
+
+        <div class="hero-text">
+
+            <i class="fas fa-shipping-fast"></i> أسرع توصيل في دول الخليج مع ضمان السلامة
+
+            <div class="delivery-icons">
+
+                <i class="fas fa-truck"></i>
+
+                <i class="fas fa-box"></i>
+
+                <i class="fas fa-shipping-fast"></i>
+
+                <i class="fas fa-shield-alt"></i>
+
+            </div>
+
+        </div>
+
+        <img src="https://images.unsplash.com/photo-1584308666744-24d5c474f2ae?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1200&q=80" 
+
+             alt="Pharmacy Products" class="hero-image">
+
+    </div>
+
+
+    <!-- Country Selection -->
+
+    <section class="country-selection">
+
+        <h2 class="section-title">Choose Your Country</h2>
+
+        <span class="section-subtitle">اختر بلدك</span>
+
+        <div class="country-grid">
+
+            <a href="egypt.html" class="country-card">
+
+                <img src="https://flagcdn.com/w40/eg.png" alt="Egypt">
+
+                <div class="country-name">
+
+                    <span class="arabic-name">مصر</span>
+
+                    <span class="english-name">Egypt</span>
+
+                </div>
+
+            </a>
+
+            <a href="uae.html" class="country-card">
+
+                <img src="https://flagcdn.com/w40/ae.png" alt="UAE">
+
+                <div class="country-name">
+
+                    <span class="arabic-name">الإمارات</span>
+
+                    <span class="english-name">UAE</span>
+
+                </div>
+
+            </a>
+
+            <a href="saudi.html" class="country-card">
+
+                <img src="https://flagcdn.com/w40/sa.png" alt="Saudi Arabia">
+
+                <div class="country-name">
+
+                    <span class="arabic-name">السعودية</span>
+
+                    <span class="english-name">Saudi Arabia</span>
+
+                </div>
+
+            </a>
+
+            <a href="qatar.html" class="country-card">
+
+                <img src="https://flagcdn.com/w40/qa.png" alt="Qatar">
+
+                <div class="country-name">
+
+                    <span class="arabic-name">قطر</span>
+
+                    <span class="english-name">Qatar</span>
+
+                </div>
+
+            </a>
+
+            <a href="kuwait.html" class="country-card">
+
+                <img src="https://flagcdn.com/w40/kw.png" alt="Kuwait">
+
+                <div class="country-name">
+
+                    <span class="arabic-name">الكويت</span>
+
+                    <span class="english-name">Kuwait</span>
+
+                </div>
+
+            </a>
+
+            <a href="oman.html" class="country-card">
+
+                <img src="https://flagcdn.com/w40/om.png" alt="Oman">
+
+                <div class="country-name">
+
+                    <span class="arabic-name">عمان</span>
+
+                    <span class="english-name">Oman</span>
+
+                </div>
+
+            </a>
+
+            <a href="bahrain.html" class="country-card">
+
+                <img src="https://flagcdn.com/w40/bh.png" alt="Bahrain">
+
+                <div class="country-name">
+
+                    <span class="arabic-name">البحرين</span>
+
+                    <span class="english-name">Bahrain</span>
+
+                </div>
+
+            </a>
+
+        </div>
+
+    </section>
+
+    
+
+    <script>
+
+        // Add pop animation to header country names
+
+        document.querySelectorAll('.country-list span').forEach(country => {
+
+            country.addEventListener('click', function() {
+
+                this.style.animation = 'pop 0.5s ease';
+
+                setTimeout(() => {
+
+                    this.style.animation = '';
+
+                }, 500);
+
+            });
+
+        });
+
+        
+
+        // Add animation to country cards on page load
+
+        document.addEventListener('DOMContentLoaded', function() {
+
+            const cards = document.querySelectorAll('.country-card');
+
+            cards.forEach((card, index) => {
+
+                setTimeout(() => {
+
+                    card.style.opacity = '0';
+
+                    card.style.transform = 'translateY(30px)';
+
+                    card.style.animation = `fadeInUp 0.8s ease forwards ${index * 0.1}s`;
+
+                }, 100);
+
+            });
+
+            
+
+            // Create a dynamic CSS rule for fadeInUp animation
+
+            const style = document.createElement('style');
+
+            style.textContent = `
+
+                @keyframes fadeInUp {
+
+                    from {
+
+                        opacity: 0;
+
+                        transform: translateY(30px);
+
+                    }
+
+                    to {
+
+                        opacity: 1;
+
+                        transform: translateY(0);
+
+                    }
+
+                }
+
+            `;
+
+            document.head.appendChild(style);
+
+        });
+
+    </script>
+
+</body>
+
+</html>
+
 
