--- a/index.html
+++ b/index.html
@@ -517,6 +517,12 @@
             </a>
         </div>
     </section>
+    
+    <!-- Footer -->
+    <footer class="footer">
+        <p>© 2023 MOHAMED DRUGS SHOP. Premium Pharmacy</p>
+    </footer>
+    
     <script>
         // Add pop animation to header country names
         document.querySelectorAll('.country-list span').forEach(country => {
