--- a/index.html
+++ b/index.html
@@ -16,14 +16,7 @@
             --text-light: #e0e0e0;
             --text-muted: #aaa;
             --accent-purple: #9c27b0;
-            --accent-blue: #2196f3;
-            --accent-green: #4caf50;
-            --accent-orange: #ff9800;
-            --accent-red: #f44336;
-            --glow: 0 0 15px rgba(0, 195, 255, 0.7);
-        }
-
-        * {
+            --accent-blue: 
             margin: 0;
             padding: 0;
             box-sizing: border-box;
