--- a/index.html
+++ b/index.html
@@ -559,8 +559,8 @@
         </div>
         
         <div class="header">
-            <h1>Premium Rating</h1>
-            <p>Share your experience and help us improve</p>
+            <h1>Ratings (التقييم)</h1>
+            <p>شارك تجربتك وساعدنا على التحسين</p>
         </div>
         
         <div class="ratings-section-title">
@@ -576,16 +576,16 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star-half-alt"></i>
             </div>
-            <div class="based-on">Based on 183 premium customer ratings</div>
-        </div>
-
+            <div class="based-on">
+  بناءً على ١٨٣ تقييمًا من العملاء
+</div>
         <div class="rating-box">
             <label class="rating-box-label">
                 <i class="fas fa-star"></i>
-                Choose Your Rating
-            </label>
+                Choose Your Rating (اختر تقييمك) 
+               </label>
             <div class="rating-selector" id="ratingSelector">
-                <span>Select your rating</span>
+                <span>Select your rating (حدد تقييمك)</span>
                 <i class="fas fa-chevron-down"></i>
             </div>
             <div class="rating-options" id="ratingOptions">
@@ -672,28 +672,28 @@
             </div>
             <div class="error-message" id="ratingError">
                 <i class="fas fa-exclamation-circle"></i>
-                <span>Please select a rating</span>
+                <span>Please select a rating (يرجى اختيار التقييم)</span>
             </div>
         </div>
 
         <div class="purchase-code">
             <label class="purchase-code-label">
                 <i class="fas fa-key"></i>
-                Purchasing Code
+                Purchasing Code (رمز الشراء) 
             </label>
             <input type="text" class="purchase-code-input" id="purchaseCode" placeholder="Enter your purchasing code">
             <div class="error-message" id="codeError">
                 <i class="fas fa-exclamation-circle"></i>
-                <span>Please enter a purchasing code</span>
+                <span>Please enter a purchasing code.(يرجى إدخال رمز الشراء)</span>
             </div>
             <div class="error-message" id="invalidCodeError">
                 <i class="fas fa-exclamation-circle"></i>
-                <span>Invalid purchasing code. Please make a purchase to rate.</span>
+                <span>Invalid purchasing code.(رمز الشراء غير صالح)</span>
             </div>
         </div>
 
         <button class="submit-btn" id="submitBtn">
-            Submit Rating
+            Submit Rating (إرسال التقييم) 
             <div class="loading-bar" id="loadingBar"></div>
         </button>
 
