--- a/index.html
+++ b/index.html
@@ -582,7 +582,8 @@
         <div class="rating-box">
             <label class="rating-box-label">
                 <i class="fas fa-star"></i>
-                Choose Your Rating (اختر تقييمك) 
+                Choose Your Rating 
+                (اختر تقييمك) 
                </label>
             <div class="rating-selector" id="ratingSelector">
                 <span>Select your rating (حدد تقييمك)</span>
@@ -693,7 +694,8 @@
         </div>
 
         <button class="submit-btn" id="submitBtn">
-            Submit Rating (إرسال التقييم) 
+            Submit Rating
+            (إرسال التقييم) 
             <div class="loading-bar" id="loadingBar"></div>
         </button>
 
