--- a/index.html
+++ b/index.html
@@ -582,11 +582,10 @@
         <div class="rating-box">
             <label class="rating-box-label">
                 <i class="fas fa-star"></i>
-                Choose Your Rating 
-                (اختر تقييمك) 
+                Choose Rating (اختر تقييمك) 
                </label>
             <div class="rating-selector" id="ratingSelector">
-                <span>Select your rating (حدد تقييمك)</span>
+                <span>Select Rating (حدد تقييمك)</span>
                 <i class="fas fa-chevron-down"></i>
             </div>
             <div class="rating-options" id="ratingOptions">
@@ -596,7 +595,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
+                            <i class=fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
                         <div class="option-text">
@@ -673,7 +672,7 @@
             </div>
             <div class="error-message" id="ratingError">
                 <i class="fas fa-exclamation-circle"></i>
-                <span>Please select a rating (يرجى اختيار التقييم)</span>
+                <span>Please select ratings (يرجى اختيار التقييم)</span>
             </div>
         </div>
 
@@ -694,8 +693,7 @@
         </div>
 
         <button class="submit-btn" id="submitBtn">
-            Submit Rating
-            (إرسال التقييم) 
+            Submit (إرسال التقييم) 
             <div class="loading-bar" id="loadingBar"></div>
         </button>
 
