--- a/index.html
+++ b/index.html
@@ -123,14 +123,16 @@
         
         /* Hero Image */
         .hero-container {
-            position: relative;
-            width: 100%;
-            max-width: 1200px;
-            margin: 40px auto 0;
-            padding: 0 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+    position: relative;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transform: translateY(-20px); /* ✅ Moves the container 20px upward */
+}
         }
         
         .hero-image {
